hero layout fixes done. the language switch was behind of video wraper

--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,7 @@ h1.logo {
   width: 3.5rem;
   height: 1.8rem;
   display: inline-block;
+  /* z-index: 9; */
 }
 
 /* Hidden checkbox */
@@ -248,7 +249,8 @@ h1.logo {
 .circular-image.biosphere {
   margin-right: 0;
 }
-.flowing-text, .flowing-text-biosphere {
+.flowing-text,
+.flowing-text-biosphere {
   text-align: justify;
   line-height: 1.7;
   hyphens: auto;
@@ -371,8 +373,12 @@ footer {
 
 .hero-text-content {
   width: 50%;
+  min-width: 50%;
   color: white;
   z-index: 10;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .seed-icon {
@@ -389,7 +395,9 @@ footer {
   margin-left: 2rem;
   animation: fadeInUp 0.8s ease-out 0.4s backwards;
 }
-
+body.es .hero-text-content h3 {
+    text-wrap: wrap;
+  }
 .title-group {
   display: flex;
   align-items: center;
@@ -412,7 +420,7 @@ footer {
 .seed-divider {
   width: 90px;
   height: 80px;
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .description {
@@ -492,7 +500,7 @@ footer {
 /*                          MEDIA QUERIES                           */
 
 /*                          XXL DESKTOP                           */
-@media (min-width: 1536px)  {
+@media (min-width: 1536px) {
   .hero {
     padding: 2rem 1rem 2rem 1.5rem;
     justify-content: flex-end;
@@ -539,7 +547,6 @@ footer {
   .seed-divider {
     width: 120px;
     height: 100px;
-    opacity: 0.7;
   }
 
   .description {
@@ -556,7 +563,7 @@ footer {
 
   .video-blob-wrapper {
     width: 100%;
-    height: 1100px;
+    height: 1110px;
     overflow: hidden;
   }
   .header {
@@ -591,7 +598,7 @@ footer {
 /*                          XL DESKTOP                           */
 @media (min-width: 1440px) and (max-width: 1535px) {
   .hero {
-    padding: 2rem 2rem 2rem 1.5rem;
+    padding: 2rem 1.8rem 2rem 1.5rem;
   }
 
   .hero-content {
@@ -599,7 +606,8 @@ footer {
     max-width: 1400px;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 5rem;
+    gap: 4rem;
+    overflow: hidden;
   }
 
   .hero-text-content {
@@ -632,7 +640,6 @@ footer {
   .seed-divider {
     width: 120px;
     height: 100px;
-    opacity: 0.7;
   }
 
   .description {
@@ -650,6 +657,7 @@ footer {
   .video-blob-wrapper {
     width: 100%;
     height: 1000px;
+    overflow: hidden;
   }
   .header {
     min-height: 300px;
@@ -710,7 +718,9 @@ footer {
     text-align: center;
     margin-left: 2rem;
   }
-
+  body.es .hero-text-content h3 {
+    text-wrap: wrap;
+  }
   .title-group {
     gap: 20px;
     margin-bottom: 30px;
@@ -724,7 +734,7 @@ footer {
   .seed-divider {
     width: 120px;
     height: 100px;
-    opacity: 0.7;
+    opacity: 1;
   }
 
   .description {
@@ -770,7 +780,6 @@ footer {
     width: 280px;
     height: 400px;
   }
-  
 }
 /*                          LAPTOP                           */
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -800,7 +809,9 @@ footer {
     text-align: center;
     margin-left: 2rem;
   }
-
+  body.es .hero-text-content h3 {
+    text-wrap: wrap;
+  }
   .title-group {
     flex-direction: column;
     gap: 20px;
@@ -856,17 +867,17 @@ footer {
   }
 
   .circular-image {
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  object-fit: cover;
-  shape-outside: circle(50%);
-  float: left;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); */
-}
-    .imageSection4 {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    shape-outside: circle(50%);
+    float: left;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); */
+  }
+  .imageSection4 {
     min-height: 250px;
   }
 }
@@ -875,6 +886,72 @@ footer {
   body.fixed-nav nav {
     max-width: 960px;
   }
+  .hero {
+    padding: 0 1rem;
+  }
+
+  .hero-content {
+    height: 500px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 1rem;
+  }
+
+  .hero-text-content {
+    align-items: center;
+    gap: 2rem;
+    width: 50%;
+    min-width: 50%;
+    text-align: center;
+  }
+  body.es .hero-text-content {
+    width: 80%;
+  }
+  .hero-text-content h3 {
+    font-size: 1.4rem;
+    margin-bottom: 20px;
+    font-weight: 400;
+    text-wrap: nowrap;
+    text-align: center;
+    margin-left: 2rem;
+  }
+  body.es .hero-text-content h3 {
+    text-wrap: wrap;
+  }
+
+  .title-group {
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 30px;
+  }
+
+  .title-group h1 {
+    font-size: 48px;
+    text-shadow: 2px 4px 8px rgb(28 45 21);
+  }
+
+  .seed-divider {
+    width: 100px;
+    height: 80px;
+    opacity: 1;
+  }
+
+  .description {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 0;
+  }
+
+  .cta-button {
+    margin-top: 40px;
+    padding: 20px;
+    font-size: 18px;
+  }
+
+  .video-blob-wrapper {
+    height: 900px;
+  }
+
   .button {
     padding: 10px 20px;
     font-size: 14px;
@@ -918,17 +995,19 @@ footer {
 
   .video-blob-wrapper {
     height: 600px;
+    display: none;
   }
 
   .hero-text-content {
     width: 100%;
     text-align: center;
     align-items: center;
+    gap: 3rem;
   }
 
   .hero-text-content h3 {
     font-size: 1.4rem;
-    margin-left: 2rem;
+    margin-left: 0;
   }
 
   .title-group {
@@ -1030,6 +1109,11 @@ footer {
 
   .cta-button {
     font-size: 18px;
+    padding: 10px;
+    width: max-content;
+  }
+  body.es .cta-button {
+    padding: 7px 15px;
   }
   .language {
     font-size: 1.2rem;
